--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       </div>
     </header>
     <main>
-      <section class="hero">
-        <div class="conteiner">
+      <section class="hero hero-img">
+        <div class="conteiner hero-div">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="button-hero" type="button">Order Service</button>
         </div>
@@ -142,6 +142,36 @@
               <div class="our-team-text">
                 <h3 class="our-team-title">Mark Guerrero</h3>
                 <p class="our-team-p">Product Designer</p>
+                <ul class="our-team-footer-list list">
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -154,6 +184,36 @@
               <div class="our-team-text">
                 <h3 class="our-team-title">Tom Ford</h3>
                 <p class="our-team-p">Frontend Developer</p>
+                <ul class="our-team-footer-list list">
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -166,6 +226,36 @@
               <div class="our-team-text">
                 <h3 class="our-team-title">Camila Garcia</h3>
                 <p class="our-team-p">Marketing</p>
+                <ul class="our-team-footer-list list">
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-item">
@@ -178,48 +268,140 @@
               <div class="our-team-text">
                 <h3 class="our-team-title">Daniel Wilson</h3>
                 <p class="our-team-p">UI Designer</p>
+                <ul class="our-team-footer-list list">
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="our-team-footer-item link">
+                    <a class="our-team-footer-list-link" href="#">
+                      <svg class="our-team-footer-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
-      <section>
+      <section class="customers">
         <div class="conteiner">
-          <h3>Customers</h3>
-          <ul>
-            <li class="coustomers-items">
-              <a href="#">
-                <svg>
+          <h3 class="customers-title">Customers</h3>
+          <ul class="coustomers-list list">
+            <li class="coustomers-items link">
+              <a class="coustomers-items-link" href="#">
+                <svg class="coustomers-items-icon">
                   <use href="./images/sprite.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
-            <li class="coustomers-items2">
-              <a href="#"> </a>
+            <li class="coustomers-items">
+              <a class="coustomers-items-link" href="#">
+                <svg class="coustomers-items-icon">
+                  <use href="./images/sprite.svg#icon-company-tagline"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href=""> </a>
+            <li class="coustomers-items link">
+              <a class="coustomers-items-link" href=""
+                ><svg class="coustomers-items-icon">
+                  <use href="./images/sprite.svg#icon-company"></use>
+                </svg>
+              </a>
             </li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li class="coustomers-items link">
+              <a class="coustomers-items-link" href=""
+                ><svg class="coustomers-items-icon">
+                  <use href="./images/sprite.svg#icon-foster"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="coustomers-items link">
+              <a class="coustomers-items-link" href="">
+                <svg class="coustomers-items-icon">
+                  <use href="./images/sprite.svg#icon-brend"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="coustomers-items link">
+              <a class="coustomers-items-link" href="">
+                <svg class="coustomers-items-icon">
+                  <use href="./images/sprite.svg#icon-company-tag"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="conteiner">
-        <div class="logo-web-footer">
-          <a class="logo" href="./index.html"
-            ><span class="logo-Web">Web</span
-            ><span class="logo-footer-studio">Studio</span>
-          </a>
+      <div class="conteiner footer-div">
+        <div>
+          <div class="logo-web-footer">
+            <a class="logo" href="./index.html"
+              ><span class="logo-Web">Web</span
+              ><span class="logo-footer-studio">Studio</span>
+            </a>
+          </div>
+
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
 
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-text-social">
+          <h3 class="text-footer-social">Social media</h3>
+          <ul class="footer-social-list list">
+            <li class="footer-social-link">
+              <a class="footer-social-list-link" href="">
+                <svg class="our-team-footer-icon-grean">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-link">
+              <a class="footer-social-list-link" href="">
+                <svg class="our-team-footer-icon-grean">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-link">
+              <a class="footer-social-list-link" href="">
+                <svg class="our-team-footer-icon-grean">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-link">
+              <a class="footer-social-list-link" href="">
+                <svg class="our-team-footer-icon-grean">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
