--- a/portfolio.html
+++ b/portfolio.html
@@ -212,17 +212,54 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="conteiner">
-        <div class="logo-web-footer">
-          <a class="logo" href="./index.html"
-            ><span class="logo-Web">Web</span
-            ><span class="logo-footer-studio">Studio</span>
-          </a>
+      <div class="conteiner footer-div">
+        <div>
+          <div class="logo-web-footer">
+            <a class="logo" href="./index.html"
+              ><span class="logo-Web">Web</span
+              ><span class="logo-footer-studio">Studio</span>
+            </a>
+          </div>
+
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+
+        <div class="footer-text-social">
+          <h3 class="text-footer-social">Social media</h3>
+          <ul class="footer-social-list list">
+            <li class="footer-social-link">
+              <a class="footer-social-list-link" href="">
+                <svg class="our-team-footer-icon-grean">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-link">
+              <a class="footer-social-list-link" href="">
+                <svg class="our-team-footer-icon-grean">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-link">
+              <a class="footer-social-list-link" href="">
+                <svg class="our-team-footer-icon-grean">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-link">
+              <a class="footer-social-list-link" href="">
+                <svg class="our-team-footer-icon-grean">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
