--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
           <h2 class="visually-hidden">features</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="features-item-icon">
+                <svg class="features-icon">
+                  <use href="./images/sprite.svg#icon-strategy"></use>
+                </svg>
+              </div>
               <h3 class="text-features-title">Strategy</h3>
               <p class="text-features-p">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-item-icon">
+                <svg class="features-icon">
+                  <use href="./images/sprite.svg#icon-punctuality"></use>
+                </svg>
+              </div>
               <h3 class="text-features-title">Punctuality</h3>
               <p class="text-features-p">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-item-icon">
+                <svg class="features-icon">
+                  <use href="./images/sprite.svg#icon-diligence"></use>
+                </svg>
+              </div>
               <h3 class="text-features-title">Diligence</h3>
               <p class="text-features-p">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-item-icon">
+                <svg class="features-icon">
+                  <use href="./images/sprite.svg#icon-technologies"></use>
+                </svg>
+              </div>
               <h3 class="text-features-title">Technologies</h3>
               <p class="text-features-p">
                 Design practice focused on digital experiences. We bring forth a
