--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             ><span class="logo-Web">Web</span>Studio</a
           >
           <ul class="header-list list nav-conteiner">
-            <li class="header-item">
+            <li class="header-item link-studio">
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
